# nfv

./: .gitignore  README.md  demo.py  eval.py  plot_flows.py  pyproject.toml  test_video.py  train.py
datasets/drone_data/: hwy04_densities_c30.npy  load.py
datasets/i24/: load.py
datasets/i24/train/: 11-21-2022_post_TX.pt  11-22-2022_post_TX.pt  11-23-2022_post_TX.pt  11-28-2022_post_TX.pt  11-29-2022_post_TX.pt  11-30-2022_post_TX.pt  12-01-2022_post_TX.pt  12-02-2022_post_TX.pt
models/: load_model.py
models/greenberg/: supervised.pth  unsupervised.pth
models/greenshield/: supervised.pth  unsupervised.pth
models/trapezoidal/: supervised.pth  unsupervised.pth
models/triangular/: supervised.pth  unsupervised.pth
models/triangular_skewed/: supervised.pth  unsupervised.pth
models/underwood/: supervised.pth  unsupervised.pth
nfv/: problem.py
nfv/flows/: __init__.py  flow.py  greenberg.py  greenshield.py  trapezoidal.py  triangular.py  triangular_skewed.py  underwood.py
nfv/initial_conditions/: __init__.py  initial_condition.py  piecewise_constant.py  riemann.py
nfv/models/: __init__.py  cnn_2d.py  cnn_stencil.py
nfv/solvers/: __init__.py  dg.py  engquist_osher.py  eno.py  finite_volume.py  godunov.py  lax_friedrichs.py  lax_hopf.py  weno.py
nfv/utils/: device.py  formatting.py  plotting.py  tensor.py
